tests/invalid_ast_samples/9e0944875f10490b5ac4a9f3d9d545f09d5e58fd18887e44f47e1a0f59ddac12.py
from ast import ImportFrom
from ast import Module

tree = Module(body=[ImportFrom(module="name_5", names=[], level=0)], type_ignores=[])

# version: 3.9.15
# seed = 4634023
#
# Source:
# from name_5 import
#
#
# Error:
#     SyntaxError('invalid syntax', ('<file>', 1, 20, 'from name_5 import \n'))
